welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: '<-' expected but ')' found.
  for ( i<=0 to hauteur-1 ){
                          ^Array1:20: error: illegal start of simple expression
} 
^